# assetlib

./: .gitmodules  CMakeLists.txt  README.md
include/assetlib/: asset_file.hpp  environment.hpp  mesh.hpp  texture.hpp  versions.hpp
src/: asset_file.cpp  environment.cpp  mesh.cpp  texture.cpp
